--- a/themes/alpha-dust/layout/_partial/footer.ejs
+++ b/themes/alpha-dust/layout/_partial/footer.ejs
@@ -19,7 +19,7 @@
                     <li class="list-inline-item">
                         <a href="<%- theme.github_url %>">
                             <span class="footer-icon-container">
-                                <i class="fa fa-github"></i>
+                                <i class="fab fa-github"></i>
                             </span>
                         </a>
                     </li>
@@ -28,7 +28,7 @@
                     <li class="list-inline-item">
                         <a href="<%- theme.twitter_url %>">
                             <span class="footer-icon-container">
-                                <i class="fa fa-twitter"></i>
+                                <i class="fab fa-twitter"></i>
                             </span>
                         </a>
                     </li>
@@ -37,7 +37,7 @@
                     <li class="list-inline-item">
                         <a href="<%- theme.facebook_url %>">
                             <span class="footer-icon-container">
-                                <i class="fa fa-facebook"></i>
+                                <i class="fab fa-facebook-f"></i>
                             </span>
                         </a>
                     </li>
@@ -46,52 +46,17 @@
                     <li class="list-inline-item">
                         <a href="<%- theme.instagram_url %>">
                             <span class="footer-icon-container">
-                                <i class="fa fa-instagram"></i>
+                                <i class="fab fa-instagram"></i>
                             </span>
                         </a>
                     </li>
                     <% } %>
-                    <% if(theme.dribble_url) { %>
-                    <li class="list-inline-item">
-                        <a href="<%- theme.dribble_url %>">
-                            <span class="footer-icon-container">
-                                <i class="fa fa-dribbble"></i>
-                            </span>
-                        </a>
-                    </li>
-                    <% } %>
-                    <% if(theme.googleplus_url) { %>
-                    <li class="list-inline-item">
-                        <a href="<%- theme.googleplus_url %>">
-                            <span class="footer-icon-container">
-                                <i class="fa fa-google-plus"></i>
-                            </span>
-                        </a>
-                    </li>
-                    <% } %>
-                    <% if(theme.behance_url) { %>
-                    <li class="list-inline-item">
-                        <a href="<%- theme.behance_url %>">
-                            <span class="footer-icon-container">
-                                <i class="fa fa-behance"></i>
-                            </span>
-                        </a>
-                    </li>
-                    <% } %>
-                    <% if(theme.fivehundredpx_url) { %>
-                    <li class="list-inline-item">
-                        <a href="<%- theme.fivehundredpx_url %>">
-                            <span class="footer-icon-container">
-                                <i class="fa fa-500px"></i>
-                            </span>
-                        </a>
-                    </li>
-                    <% } %>
+                    
                     <% if(theme.email_url) { %>
                     <li class="list-inline-item">
                         <a href="mailto:<%- theme.email_url %>">
                             <span class="footer-icon-container">
-                                <i class="fa fa-envelope-o"></i>
+                                <i class="far fa-envelope"></i>
                             </span>
                         </a>
                     </li>
