--- a/themes/alpha-dust/layout/_partial/head.ejs
+++ b/themes/alpha-dust/layout/_partial/head.ejs
@@ -79,15 +79,25 @@
     <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/fontawesome.js" integrity="sha384-EMmnH+Njn8umuoSMZ3Ae3bC9hDknHKOWL2e9WJD/cN6XLeAN7tr5ZQ0Hx5HDHtkS" crossorigin="anonymous"></script>
 
 
-    <!-- link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" -->
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <!--script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script-->
-        <script src="https://use.fontawesome.com/6ceb457b32.js"></script>
-        <script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!--[if lt IE 9]-->
+        <!--script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script -->
+        <!--script src="https://use.fontawesome.com/6ceb457b32.js"></script -->
+        <!--script src="" ></script-->
+
+    <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
+
+
+
+
+
+
+
+    <!--script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script -->
+
+
+    <!--[endif]-->
 
     <!-- Gallery -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.min.css" type="text/css" rel="stylesheet" />
