--- a/themes/alpha-dust/template/css/style.styl
+++ b/themes/alpha-dust/template/css/style.styl
@@ -286,7 +286,7 @@ nav
   top 1.5em
   z-index 10000
   a, a:link, a:visited, a:active
-    font-family FontAwesome
+    font-family Font Awesome 5 Free
     font-style normal
     border-bottom none
     font-size 2em
@@ -364,7 +364,7 @@ figure.highlight
     padding-top 10px
     &:before
       content "\f016"
-      font-family FontAwesome
+      font-family Font Awesome 5 Free
       margin 0 20px 0 50px
     a
       margin-left 10px
