--- a/themes/alpha-dust/template/index.html
+++ b/themes/alpha-dust/template/index.html
@@ -177,49 +177,28 @@
                     <li class="list-inline-item">
                         <a href="#">
                                 <span class="footer-icon-container">
-                                    <i class="fa fa-github"></i>
+                                    <i class="fab fa-github"></i>
                                 </span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="#">
                                 <span class="footer-icon-container">
-                                    <i class="fa fa-facebook"></i>
+                                    <i class="fab fa-facebook"></i>
                                 </span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="#">
                                 <span class="footer-icon-container">
-                                    <i class="fa fa-twitter"></i>
+                                    <i class="fab fa-twitter"></i>
                                 </span>
                         </a>
                     </li>
                     <li class="list-inline-item">
                         <a href="#">
                                 <span class="footer-icon-container">
-                                    <i class="fa fa-instagram"></i>
-                                </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#">
-                                <span class="footer-icon-container">
-                                    <i class="fa fa-dribbble"></i>
-                                </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#">
-                                <span class="footer-icon-container">
-                                    <i class="fa fa-google-plus"></i>
-                                </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#">
-                                <span class="footer-icon-container">
-                                    <i class="fa fa-behance"></i>
+                                    <i class="fab fa-instagram"></i>
                                 </span>
                         </a>
                     </li>
